--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.hectorclient</groupId>
     <artifactId>hector</artifactId>
-    <version>1.1-3</version>
+    <version>1.1-3-agora-1</version>
   </parent>
   
   <artifactId>hector-core</artifactId>
