--- a/object-mapper/pom.xml
+++ b/object-mapper/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.hectorclient</groupId>
 		<artifactId>hector</artifactId>
-		<version>1.1-3</version>
+		<version>1.1-3-agora-1</version>
 	</parent>
 	<artifactId>hector-object-mapper</artifactId>
 	<name>hector-object-mapper</name>
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>org.hectorclient</groupId>
 			<artifactId>hector-core</artifactId>
-			<version>1.1-3</version>
+			<version>1.1-3-agora-1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>log4j</groupId>
@@ -61,7 +61,7 @@
 		<dependency>
 			<groupId>org.hectorclient</groupId>
 			<artifactId>hector-test</artifactId>
-			<version>1.1-3</version>
+			<version>1.1-3-agora-1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
